tests/paczka1/small_fuzzy/25422536.err
Error in line 3: 5fxLuLEUOK A800 86,5
Error in line 4: 5fxLuLEUOK S539 90,8
